--- a/src/main/resources/templates/admin-template/hoa-don.html
+++ b/src/main/resources/templates/admin-template/hoa-don.html
@@ -51,7 +51,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="/hoa-don">
+            <a class="nav-link collapsed" href="/ban-hang-tai-quay/hoa-don">
                 <i class="bi bi-shop"></i>
                 <span>Bán Hàng</span>
             </a>
@@ -97,7 +97,7 @@
         </li><!-- End Components Nav -->
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="/hoa-don/quan-ly">
+            <a class="nav-link collapsed" href="/hoa-don/quan-ly" >
                 <i class="bi bi-receipt-cutoff"></i>
                 <span>Quản Lý Hóa Đơn</span>
             </a>
@@ -115,7 +115,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/admin/khach-hang" class="active">
+                    <a href="/admin/khach-hang" >
                         <i class="bi bi-circle"></i><span>Quản lý khách hàng</span>
                     </a>
                 </li>
