--- a/src/main/resources/templates/admin-template/ban-hang.html
+++ b/src/main/resources/templates/admin-template/ban-hang.html
@@ -94,7 +94,7 @@
         </li><!-- End Components Nav -->
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="/ban-hang-tai-quay/hoa-don/quan-ly">
+            <a class="nav-link collapsed" href="/hoa-don/quan-ly">
                 <i class="bi bi-receipt-cutoff"></i>
                 <span>Quản Lý Hóa Đơn</span>
             </a>
@@ -112,7 +112,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/admin/khach-hang" class="active">
+                    <a href="/admin/khach-hang" >
                         <i class="bi bi-circle"></i><span>Quản lý khách hàng</span>
                     </a>
                 </li>
