--- a/src/main/resources/templates/admin-template/hoa-don-chi-tiet.html
+++ b/src/main/resources/templates/admin-template/hoa-don-chi-tiet.html
@@ -258,7 +258,7 @@
                                                             ]
                                                         </h6>
                                                         <span>Đơn giá: <span class="gia">
-                                                                                        [[${#numbers.formatDecimal(obj.DonGia, 0, 'COMMA', 0, 'POINT') + ' VNĐ'}]]
+                                                                                        [[${#numbers.formatDecimal(obj.DonGia, 0, 'POINT', 0, 'POINT') + ' VNĐ'}]]
                                                                                         </span></span>
                                                         <p>Tay áo:
                                                             [[${obj.ChiTietSanPham.TayAo.ten}]]
@@ -278,7 +278,7 @@
 
                                         <td>
                                             <div class="price-table">
-                                                [[${#numbers.formatDecimal(obj.tongTien(), 0, 'COMMA', 0, 'POINT') + ' VNĐ'}]]
+                                                [[${#numbers.formatDecimal(obj.tongTien(), 0, 'POINT', 0, 'POINT') + ' VNĐ'}]]
                                             </div>
                                         </td>
 
@@ -1192,12 +1192,12 @@
                                                                                     <small
                                                                                             class="text-body-secondary"
                                                                                             style="display: block"
-                                                                                            th:text="${'Giảm tối đa '+voucher.giamToiDa+ ' VND'}"></small>
+                                                                                            th:text="${'Giảm tối đa '+#numbers.formatDecimal(voucher.giamToiDa, 0, 'POINT', 0, 'POINT') + ' VNĐ'}"></small>
                                                                                     <small
                                                                                             id="donToiThieu"
                                                                                             class="text-body-secondary"
                                                                                             style="display: block"
-                                                                                            th:text="${'Đơn Tối Thiểu '+voucher.giaTriDonToiThieu+ ' VND'}"></small>
+                                                                                            th:text="${'Đơn Tối Thiểu '+#numbers.formatDecimal(voucher.giaTriDonToiThieu, 0, 'POINT', 0, 'POINT') + ' VNĐ'}"></small>
                                                                                     <small
                                                                                             class="text-body-secondary"
                                                                                             style="display: block"
@@ -1260,7 +1260,7 @@
                                             </div>
                                             <div class="col">
                                                 <h6 id="totalAmount" class="thong-tin-gia">
-                                                    [[${#numbers.formatDecimal(hoaDon.tongTienHoaDon(), 0, 'COMMA', 0, 'POINT') + ' VNĐ'}]]
+                                                    [[${#numbers.formatDecimal(hoaDon.tongTienHoaDon(), 0, 'POINT', 0, 'POINT') + ' VNĐ'}]]
                                                 </h6>
                                                 <input th:value="${hoaDon.tongTienHoaDon()}"
                                                        type="hidden" name="tongTienHoaDon">
@@ -1273,7 +1273,7 @@
                                             <div class="col">
                                                 <h6 id="phi-van-chuyen"
                                                     class="thong-tin-gia">
-                                                    [[${#numbers.formatDecimal(hoaDon.phiShip, 0, 'COMMA', 0, 'POINT') + ' VNĐ'}]]
+                                                    [[${#numbers.formatDecimal(hoaDon.phiShip, 0, 'POINT', 0, 'POINT') + ' VNĐ'}]]
                                                 </h6>
 
 
@@ -1292,7 +1292,7 @@
                                             </div>
                                             <div class="col">
                                                 <h6 id="moneyVoucher" class="thong-tin-gia">
-                                                    [[${#numbers.formatDecimal(hoaDon.tongTien, 0, 'COMMA', 0, 'POINT')}-${#numbers.formatDecimal(hoaDon.tongTienKhiGiam, 0, 'COMMA', 0, 'POINT')}]]
+                                                    [[${#numbers.formatDecimal(hoaDon.tongTien, 0, 'POINT', 0, 'POINT')}-${#numbers.formatDecimal(hoaDon.tongTienKhiGiam, 0, 'POINT', 0, 'POINT')}]]
                                                     VNĐ
                                                 </h6>
                                             </div>
@@ -1333,7 +1333,7 @@
                                             <div class="col">
                                                 <h6 class="thong-tin-gia" id="tongGiaH6">
                                                                                 <span
-                                                                                        id="tongGiaValue">[[${#numbers.formatDecimal(hoaDon.tongTienHoaDonKhiGiam(), 0, 'COMMA', 0, 'POINT') + ' VNĐ'}]]</span>
+                                                                                        id="tongGiaValue">[[${#numbers.formatDecimal(hoaDon.tongTienHoaDonKhiGiam(), 0, 'POINT', 0, 'POINT') + ' VNĐ'}]]</span>
                                                 </h6>
                                                 <input
                                                         th:value="${hoaDon.tongTienHoaDonKhiGiam()}"
@@ -1491,6 +1491,46 @@
                                                 Danh sách sản phẩm
                                             </h1>
                                         </div>
+                                        <!-- Add filter section -->
+                                        <div class="row mb-3" style="padding: 15px;">
+                                            <div class="col-md-3">
+                                                <label class="form-label">Tên sản phẩm:</label>
+                                                <input type="text" class="form-control" id="filterTenSanPham" placeholder="Nhập tên sản phẩm">
+                                            </div>
+                                            <div class="col-md-3">
+                                                <label class="form-label">Màu sắc:</label>
+                                                <select class="form-select" id="filterMauSac">
+                                                    <option value="">Tất cả</option>
+                                                    <option th:each="mau : ${listCtsp}" th:value="${mau.mauSac.ten}" th:text="${mau.mauSac.ten}"></option>
+                                                </select>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <label class="form-label">Kích thước:</label>
+                                                <select class="form-select" id="filterKichThuoc">
+                                                    <option value="">Tất cả</option>
+                                                    <option th:each="kich : ${listCtsp}" th:value="${kich.kichCo.ten}" th:text="${kich.kichCo.ten}"></option>
+                                                </select>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <label class="form-label">Tay áo:</label>
+                                                <select class="form-select" id="filterTayAo">
+                                                    <option value="">Tất cả</option>
+                                                    <option th:each="tay : ${listCtsp}" th:value="${tay.mauSac.ten}" th:text="${tay.kichCo.ten}"></option>
+                                                </select>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <label class="form-label">Giá từ:</label>
+                                                <input type="number" class="form-control" id="filterGiaTu" placeholder="Nhập giá từ">
+                                            </div>
+                                            <div class="col-md-3">
+                                                <label class="form-label">Giá đến:</label>
+                                                <input type="number" class="form-control" id="filterGiaDen" placeholder="Nhập giá đến">
+                                            </div>
+                                            <div class="col-md-3">
+                                                <label class="form-label">&nbsp;</label>
+                                                <button class="btn btn-primary w-100" onclick="applyFilters()">Lọc</button>
+                                            </div>
+                                        </div>
                                         <table id="example" class="display">
                                             <thead>
                                             <tr>
@@ -1532,7 +1572,7 @@
                                                                     </h6>
                                                                     <span>Đơn giá: <span
                                                                             class="gia">
-                                                                                                            [[${#numbers.formatDecimal(ctsp.giaHienHanh, 0, 'COMMA', 0, 'POINT') + ' VNĐ'}]]
+                                                                                                            [[${#numbers.formatDecimal(ctsp.giaHienHanh, 0, 'POINT', 0, 'POINT') + ' VNĐ'}]]
                                                                                                             </span></span>
                                                                     <p>Tay áo:
                                                                         [[${ctsp.TayAo.ten}]]
@@ -1545,7 +1585,7 @@
                                                         [[${ctsp.soLuong}]]
                                                     </td>
                                                     <td>
-                                                        [[${#numbers.formatDecimal(ctsp.giaHienHanh, 0, 'COMMA', 0, 'POINT') + ' VNĐ'}]]
+                                                        [[${#numbers.formatDecimal(ctsp.giaHienHanh, 0, 'POINT', 0, 'POINT') + ' VNĐ'}]]
                                                     </td>
                                                     <td>
 
@@ -1617,12 +1657,7 @@
             },
             "initComplete": function (settings, json) {
                 // CSS changes
-                $('#example_filter input[type="search"]').addClass('form-control');
-                $('#example_filter input[type="search"]').attr('placeholder', 'Tìm kiếm');
-                $('#example_filter label').contents().filter(function () {
-                    return this.nodeType === 3;
-                }).replaceWith(' ');
-
+                $('#example_filter').hide(); // Hide the default search box
                 $('#example_length label').contents().filter(function () {
                     return this.nodeType === 3;
                 }).first().replaceWith('Hiển thị');
@@ -1632,6 +1667,11 @@
 
                 $('#example_length select').addClass('form-select');
             }
+        });
+
+        // Add event listener for the product name filter
+        $('#filterTenSanPham').on('keyup', function() {
+            table.column(1).search(this.value).draw(); // Search in the second column (product name)
         });
 
         table.on('draw.dt', function () {
@@ -1777,7 +1817,7 @@
     function handleRadioVoucher(rowIndex) {
         var index = rowIndex.getAttribute('data-index');
         if (index == null) {
-            indẽ
+            return;
         }
         console.log(index)
         // Tách chuỗi thành mảng các phần tử (số)
@@ -1808,24 +1848,27 @@
 
         var detailVoucher = document.getElementById("c_code");
 
-
-        var shippingFeeResultInt = parseInt(shippingFeeResult.innerText);
-        // var tongTien = document.getElementById("tongAll");
-        var tongTienHangInt = parseInt(tongTienHang.innerText);
+        // Parse số từ text, loại bỏ 'VNĐ' và dấu chấm ngăn cách
+        var shippingFeeResultInt = parseInt(shippingFeeResult.innerText.replace(/\./g, '').replace(' VNĐ', ''));
+        var tongTienHangInt = parseInt(tongTienHang.innerText.replace(/\./g, '').replace(' VNĐ', ''));
 
         var tongTienGiamTheoPhanTram = ((tongTienHangInt * phamTramGiam) / 100)
         if (tongTienGiamTheoPhanTram > giaTriGiam) {
             tongTienGiamTheoPhanTram = giaTriGiam
         }
 
-        detailVoucher.value = -tongTienGiamTheoPhanTram + ' VND';
-        moneyVoucher.innerText = tongTienGiamTheoPhanTram + ' VND';
-        // document.getElementById('giamGiaIn').innerText = tongTienGiamTheoPhanTram;
-        console.log(tongTienGiamTheoPhanTram + 'giamgia')
-        // tongTien.value = shippingFeeResultInt + tongTienHangInt;
-        tongTienAndSale.value = shippingFeeResultInt + tongTienHangInt - tongTienGiamTheoPhanTram.toFixed(0);
-        totalElementSale.innerHTML = shippingFeeResultInt + tongTienHangInt - tongTienGiamTheoPhanTram.toFixed(0);
-        // document.getElementById('thanhTienIn').innerHTML = shippingFeeResultInt + tongTienHangInt - tongTienGiamTheoPhanTram.toFixed(0);
+        // Format số với dấu chấm ngăn cách hàng nghìn
+        function formatMoney(amount) {
+            return amount.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ".");
+        }
+
+        detailVoucher.value = '-' + formatMoney(tongTienGiamTheoPhanTram) + ' VNĐ';
+        moneyVoucher.innerText = formatMoney(tongTienGiamTheoPhanTram) + ' VNĐ';
+        
+        var tongTienSauGiam = shippingFeeResultInt + tongTienHangInt - tongTienGiamTheoPhanTram;
+        
+        tongTienAndSale.value = tongTienSauGiam;
+        totalElementSale.innerHTML = formatMoney(tongTienSauGiam) + ' VNĐ';
         document.getElementById('giamGiaInput').value = tongTienGiamTheoPhanTram.toFixed(0);
     }
 
