--- a/src/main/resources/templates/admin-template/san_pham/san-pham.html
+++ b/src/main/resources/templates/admin-template/san_pham/san-pham.html
@@ -10,12 +10,31 @@
     <meta content="" name="description">
     <meta content="" name="keywords">
 
+    <!--    thư viện của bảng tích hợp tìm kiếm-->
+    <link rel='stylesheet' href='https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css'>
+    <!--    thư viện của bảng tích hợp tìm kiếm end-->
+
+    <!-- Favicons -->
     <link href="../../../static/img/logo_teehaven.png" rel="icon">
     <link href="../../../static/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-    <link rel='stylesheet' href='https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css'>
-    <!-- Favicons -->
-    <div th:replace="~{admin-template/fragment/header :: header}"></div>
+    <!-- Google Fonts -->
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link
+            href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+            rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <link href="../../../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../../static/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="../../../static/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="../../../static/vendor/quill/quill.snow.css" rel="stylesheet">
+    <link href="../../../static/vendor/quill/quill.bubble.css" rel="stylesheet">
+    <link href="../../../static/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="../../../static/vendor/simple-datatables/style.css" rel="stylesheet">
+
+    <!-- Template Main CSS File -->
+    <link href="../../../static/css/style.css" rel="stylesheet">
 
 
 </head>
@@ -26,13 +45,43 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-        <a th:href="@{/ban-hang-tai-quay/hoa-don}" class="logo d-flex align-items-center">
+        <a href="/ban-hang-tai-quay/hoa-don" class="logo d-flex align-items-center">
             <img src="../../../static/img/logo_teehaven.png" alt="">
             <span class="d-none d-lg-block">Tee Haven</span>
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
 
+
+    <nav class="header-nav ms-auto">
+        <ul class="d-flex align-items-center">
+            <li class="nav-item dropdown pe-3">
+
+                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
+                    <span class="d-none d-md-block dropdown-toggle ps-2" th:text="${tenNhanVien}"></span>
+                </a><!-- End Profile Iamge Icon -->
+
+                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
+                    <li class="dropdown-header">
+                        <h6 th:text="${tenNhanVien}"></h6>
+                        <span>Nhân Viên</span>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+
+                    <li>
+                        <a class="dropdown-item d-flex align-items-center" th:href="@{/logout}">
+                            <i class="bi bi-box-arrow-right"></i>
+                            <span>Đăng Xuất</span>
+                        </a>
+                    </li>
+
+                </ul><!-- End Profile Dropdown Items -->
+            </li><!-- End Profile Nav -->
+
+        </ul>
+    </nav><!-- End Icons Navigation -->
 
 </header><!-- End Header -->
 
@@ -506,6 +555,9 @@
         content: ''; /* Xóa nội dung */
     }
 </style>
+<!--    thư viện của bảng tích hợp tìm kiếm end-->
+
+<!-- Vendor JS Files -->
 <script src="../../../static/vendor/apexcharts/apexcharts.min.js"></script>
 <script src="../../../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="../../../static/vendor/chart.js/chart.umd.js"></script>
@@ -521,7 +573,7 @@
 
 <!-- Template Main JS File -->
 <script src="../../../static/js/main-off.js"></script>
-<div th:replace="~{admin-template/fragment/script :: script}"></div>
+<!--<div th:replace="~{admin-template/fragment/script :: script}"></div>-->
 
 </body>
 </html>
